# mgz-diff

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
ext/: CMakeLists.txt
include/: diff.h  mgzdiff.h
include/mgz/: diff.h
src/: CMakeLists.txt  diff-delta.c  isolate.c  isolate.h  mgz-diff.pc.in  mgz-diff.rc.in  mgzdiff.cc  patch-delta.c
test/: CMakeLists.txt  dummy_unittest.cc  mgzdiff_unittest.cc
test/data/: aspectjweaver-1.6.11.tar  aspectjweaver-1.7.0.M1.tar  corrupted_delta.diff  delta.diff  delta.v1  fake_delta.diff  v1_changed.txt  v2.txt
